; ModuleID = '/home/carl/AnghaBench/capstone/extr_SStream.c_printUInt32Bang.c'
source_filename = "/home/carl/AnghaBench/capstone/extr_SStream.c_printUInt32Bang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HEX_THRESHOLD = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"#0x%x\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"#%u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @printUInt32Bang(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HEX_THRESHOLD, align 8
  %7 = icmp sgt i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @SStream_concat(i32* %9, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i64 %10)
  br label %16

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @SStream_concat(i32* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i64 %14)
  br label %16

16:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32 @SStream_concat(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
